--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,9 +5,7 @@ body {
   line-height: 22px;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 h4 {
   font-weight: bold;
   letter-spacing: 0.2px;
 }
@@ -22,7 +20,7 @@ body h2 {
   line-height: 34px;
 }
 
-body h3 {
+body h3, h4 {
   font-size: 18px;
   line-height: 24px;
 }
@@ -70,8 +68,7 @@ nav ul li a {
   font-weight: 600;
 }
 
-.top-section h2,
-.top-section p {
+.top-section h2, .top-section p {
   margin: 6px 0;
   padding: 0;
 }
@@ -103,12 +100,22 @@ header nav {
   text-align: right;
 }
 
+.header-div {
+  height: 70px;
+}
+
+.devtools {
+  float: right;
+  position: relative;
+  bottom: 23px;
+  right: 2%;
+}
+
 .header-ul {
   overflow: hidden;
 }
 
-header nav li a:hover,
-header nav li a.active {
+header nav li a:hover, header nav li a.active {
   color: #715cdd;
 }
 
@@ -188,10 +195,13 @@ footer a {
 .primary-btn {
   background: #715cdd;
   color: #fff;
+  cursor: pointer;
 }
 
 .primary-btn:hover {
-  cursor: pointer;
+  background: #715cdd;
+  color: #fff;
+  font-weight: 600;
 }
 
 .secondary-btn {
@@ -230,7 +240,7 @@ footer a {
   margin-bottom: 12px;
 }
 
-.blog-list > a {
+.blog-list>a {
   text-align: center;
   width: 40%;
   background: #efefef;
@@ -241,8 +251,7 @@ footer a {
   max-width: 100%;
 }
 
-.blog-column-left,
-.blog-column-right {
+.blog-column-left, .blog-column-right {
   display: flex;
   flex-direction: column;
   padding: 60px;
@@ -294,6 +303,10 @@ footer a {
   margin-top: auto;
 }
 
+.blog-roll .blog-entry {
+  font-size: 0.9em;
+}
+
 /* New Custom */
 
 .hero-banner {
@@ -306,8 +319,7 @@ footer a {
   flex-wrap: wrap;
 }
 
-.hero-content,
-.home-content {
+.hero-content, .home-content {
   text-align: left;
   margin-top: 65px;
   width: 475px;
@@ -322,6 +334,7 @@ footer a {
   display: flex;
   justify-content: space-evenly;
   text-align: center;
+  margin-top: 21px;
   margin: 63px;
   flex-wrap: wrap;
 }
@@ -333,13 +346,6 @@ footer a {
   padding: 27px;
   text-align: center;
   margin-top: 43px;
-}
-
-.mission-content-bottom,
-.mission-content-top {
-  display: flex;
-  justify-content: space-evenly;
-  text-align: left;
 }
 
 .member-main-section {
@@ -396,7 +402,7 @@ footer a {
   inline-size: max-content;
 }
 
-.featured-content > p {
+.featured-content>p {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -440,7 +446,7 @@ footer a {
 }
 
 .about-desc {
-  color: #444444;
+  color: #737b7d;
 }
 
 .mission-content-section {
@@ -448,8 +454,11 @@ footer a {
   width: 350px;
 }
 
+.mission-icon, .mission-section-content {
+  display: inline-block;
+}
+
 .mission-icon {
-  width: 50px;
   height: 50px;
   margin-top: 12px;
   display: inline-block;
@@ -521,8 +530,7 @@ footer a {
 
 /* contact page */
 
-.contact-page-section,
-.contact-maps-section {
+.contact-page-section, .contact-maps-section {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -539,31 +547,30 @@ footer a {
   width: 50%;
 }
 
-.contact-page-content > h2 {
+.contact-page-content>h2 {
   font-weight: bold;
   font-size: 44px;
   line-height: 56px;
 }
 
-.contact-page-content > p {
+.contact-page-content>p {
   font-size: 16px;
-  color: #444444;
+  color: #737b7d;
 }
 
-.input-fields,
-.text-field {
+.input-fields, .text-field {
   margin-bottom: 30px;
 }
 
 .input-fields input {
-  width: 90%;
+  width: 100%;
   background-color: #f3f3f3;
   padding: 16px 15px;
   border: none;
 }
 
 .text-field input {
-  width: 90%;
+  width: 100%;
   height: 120px;
   background-color: #f3f3f3;
   padding: 25px 15px;
@@ -599,8 +606,7 @@ footer a {
   display: none;
 }
 
-.contact-page-section,
-.contact-maps-section {
+.contact-page-section, .contact-maps-section {
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
@@ -626,12 +632,12 @@ footer a {
 /* ========================== */
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  header {
-    background: #fff;
-    position: sticky;
-    top: 0;
+  .header {
     height: 70px;
-    z-index: 9;
+    background-color: #fff;
+  }
+  .header-div {
+    height: auto;
   }
   .footer-div {
     flex-direction: column;
@@ -666,8 +672,7 @@ footer a {
     border-right: 1px solid #f4f4f4;
     text-decoration: none;
   }
-  .header li a:hover,
-  .header .menu-btn:hover {
+  .header li a:hover, .header .menu-btn:hover {
     background-color: #f4f4f4;
   }
   /* menu */
@@ -707,8 +712,7 @@ footer a {
     transition: background 0.2s ease-out;
     width: 18px;
   }
-  .header .menu-icon .navicon:before,
-  .header .menu-icon .navicon:after {
+  .header .menu-icon .navicon:before, .header .menu-icon .navicon:after {
     background: #333;
     content: "";
     display: block;
@@ -723,44 +727,41 @@ footer a {
   .header .menu-icon .navicon:after {
     top: -5px;
   }
-  .header .menu-btn:checked ~ nav {
+  .header .menu-btn:checked~nav {
     max-height: 240px;
     overflow: auto;
   }
-  .header .menu-btn:checked ~ .menu-icon .navicon {
+  .header .menu-btn:checked~.menu-icon .navicon {
     background: transparent;
   }
-  .header .menu-btn:checked ~ .menu-icon .navicon:before {
+  .header .menu-btn:checked~.menu-icon .navicon:before {
     transform: rotate(-45deg);
   }
-  .header .menu-btn:checked ~ .menu-icon .navicon:after {
+  .header .menu-btn:checked~.menu-icon .navicon:after {
     transform: rotate(45deg);
   }
-  .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-  .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  .header .menu-btn:checked~.menu-icon:not(.steps) .navicon:before, .header .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
     top: 0;
   }
   nav ul li {
     padding: 15px 0;
   }
-  body h1 {
+  h1 h2 h3 h4 {
     font-weight: bold;
+    letter-spacing: 0.1px;
+  }
+  body h1 {
     font-size: 29px;
     line-height: 38px;
     letter-spacing: 0.2px;
   }
   body h2 {
-    font-size: 36px;
-    font-weight: bold;
     font-size: 20px;
     line-height: 28px;
-    letter-spacing: 0.1px;
   }
   body h3 {
-    font-weight: bold;
     font-size: 14px;
     line-height: 24px;
-    letter-spacing: 0.1px;
   }
   .btn {
     border: none;
@@ -799,13 +800,13 @@ footer a {
     text-align: left;
     width: 90%;
   }
-  .blog-list > img {
+  .blog-list>img {
     max-width: 100%;
   }
   .blog-list-img {
     margin: auto;
   }
-  .blog-list > a {
+  .blog-list>a {
     width: 100%;
   }
   .blog-column-left {
@@ -822,7 +823,7 @@ footer a {
   .blog-content {
     width: auto;
   }
-  .hero-banner > img {
+  .hero-banner>img {
     max-width: 100%;
     margin-top: 40px;
   }
@@ -831,7 +832,7 @@ footer a {
     margin-top: 9px;
     width: 475px;
   }
-  .home-advisor-section > img {
+  .home-advisor-section>img {
     max-width: 100%;
     margin-top: 40px;
   }
@@ -856,7 +857,10 @@ footer a {
     text-align: left;
     flex-wrap: wrap;
   }
-  .featured-blog > img {
+  .content-section {
+    margin: 12px;
+  }
+  .featured-blog>img {
     width: 100%;
   }
   .member-section {
@@ -898,7 +902,7 @@ footer a {
     display: inline-block;
     text-align: center;
   }
-  .story-advisor-section > img {
+  .story-advisor-section>img {
     max-width: 100%;
   }
   .team-head-section {
@@ -923,8 +927,7 @@ footer a {
   .contact-page-form {
     width: 100%;
   }
-  .contact-page-section,
-  .contact-maps-section {
+  .contact-page-section, .contact-maps-section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -975,7 +978,7 @@ footer a {
     line-height: 24px;
     letter-spacing: 0.1px;
   }
-  body h3 {
+  body h3,body h4 {
     font-weight: bold;
     font-size: 14px;
     line-height: 24px;
@@ -1002,7 +1005,7 @@ footer a {
     width: 50%;
     margin-top: 12px;
   }
-  .hero-banner > img {
+  .hero-banner>img {
     width: 50%;
     margin: 27px 0px 0px 0px;
   }
@@ -1011,10 +1014,10 @@ footer a {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
-    margin: 63px;
+    margin: 80px 63px 63px 63px;
     flex-wrap: nowrap;
   }
-  .home-advisor-section > img {
+  .home-advisor-section>img {
     width: 50%;
   }
   .member-section {
@@ -1037,13 +1040,13 @@ footer a {
     border: #f7f5f5 solid;
     margin: 4px 14px;
   }
-  .featured-blog > img {
+  .featured-blog>img {
     max-width: 100%;
     height: 260px;
     object-fit: cover;
     inline-size: max-content;
   }
-  .featured-content > p {
+  .featured-content>p {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -1081,7 +1084,7 @@ footer a {
   .mission-icon {
     padding: 0;
   }
-  .team-details > p {
+  .team-details>p {
     margin-top: -10px;
     margin-bottom: 50px;
   }
@@ -1101,7 +1104,7 @@ footer a {
     flex-wrap: nowrap;
     padding: 45px 0;
   }
-  .maps-details > img {
+  .maps-details>img {
     max-width: 100%;
   }
   .maps-details {
@@ -1130,7 +1133,7 @@ footer a {
   .blog-list-img {
     max-width: 100%;
   }
-  .blog-list > a {
+  .blog-list>a {
     text-align: center;
     background: #f2f2f2;
     display: block;
