fix:added fixed related to gatsby source plugin [ECO-188]

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,6 +24,9 @@ body h3, h4 {
   font-size: 18px;
   line-height: 24px;
 }
+body h4 :hover{
+  color: #222222;
+}
 
 body a {
   text-decoration: none;
@@ -208,11 +211,21 @@ footer a {
   border: 1px solid #715cdd;
   color: #715cdd;
 }
+.secondary-btn:hover{
+  color: #715cdd;
+  font-weight: bold;
+}
 
 .tertiary-btn {
   background: #ffffff;
   color: #715cdd;
   font-weight: bold;
+}
+
+.tertiary-btn:hover{
+  background: #ffffff;
+  color: #715cdd;
+  font-weight: bolder;
 }
 
 .text-field textarea {
@@ -750,6 +763,7 @@ footer a {
     font-weight: bold;
     letter-spacing: 0.1px;
   }
+
   body h1 {
     font-size: 29px;
     line-height: 38px;
