--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,9 +24,6 @@ body h3, h4 {
   font-size: 18px;
   line-height: 24px;
 }
-body h4 :hover{
-  color: #222222;
-}
 
 body a {
   text-decoration: none;
@@ -112,6 +109,7 @@ header nav {
   position: relative;
   bottom: 23px;
   right: 2%;
+  cursor: pointer;
 }
 
 .header-ul {
@@ -166,7 +164,7 @@ footer a {
   height: 400px;
 }
 
-.blog-roll .blog-entry {
+.blog-roll, .blog-entry {
   font-size: 0.9em;
 }
 
@@ -211,7 +209,8 @@ footer a {
   border: 1px solid #715cdd;
   color: #715cdd;
 }
-.secondary-btn:hover{
+
+.secondary-btn:hover {
   color: #715cdd;
   font-weight: bold;
 }
@@ -222,10 +221,8 @@ footer a {
   font-weight: bold;
 }
 
-.tertiary-btn:hover{
-  background: #ffffff;
-  color: #715cdd;
-  font-weight: bolder;
+.tertiary-btn:hover {
+  color: #5c49be;
 }
 
 .text-field textarea {
@@ -239,8 +236,7 @@ footer a {
 /* Blog list section */
 
 .blog-container {
-  margin: 0 auto;
-  margin-top: 53px;
+  margin: 53px auto 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -464,7 +460,7 @@ footer a {
 
 .mission-content-section {
   display: flex;
-  width: 350px;
+  width: 380px;
 }
 
 .mission-icon, .mission-section-content {
@@ -480,10 +476,6 @@ footer a {
 
 .mission-section-content {
   display: inline-block;
-}
-
-.mission-content-section {
-  width: 380px;
 }
 
 .mission-content-top {
@@ -543,13 +535,6 @@ footer a {
 
 /* contact page */
 
-.contact-page-section, .contact-maps-section {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 45px 0;
-}
-
 .contact-page-content {
   width: 50%;
   padding-top: 55px;
@@ -592,6 +577,7 @@ footer a {
 
 .contact-maps-content {
   margin-top: 70px;
+  width: 50%;
 }
 
 /* blog list */
@@ -632,10 +618,6 @@ footer a {
 
 .maps-details img {
   max-width: 100%;
-}
-
-.contact-maps-content {
-  width: 50%;
 }
 
 /* ========================== */
@@ -763,7 +745,6 @@ footer a {
     font-weight: bold;
     letter-spacing: 0.1px;
   }
-
   body h1 {
     font-size: 29px;
     line-height: 38px;
@@ -830,9 +811,6 @@ footer a {
     background: #f2f2f2;
     padding: 17px;
     height: fit-content;
-  }
-  .blog-list {
-    display: contents;
   }
   .blog-content {
     width: auto;
@@ -949,12 +927,10 @@ footer a {
   }
   .maps-details {
     width: auto;
+    overflow: hidden;
   }
   .contact-maps-content {
     width: auto;
-  }
-  .maps-details {
-    overflow: hidden;
   }
 }
 
@@ -992,7 +968,7 @@ footer a {
     line-height: 24px;
     letter-spacing: 0.1px;
   }
-  body h3,body h4 {
+  body h3, body h4 {
     font-weight: bold;
     font-size: 14px;
     line-height: 24px;
