--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,7 +5,7 @@ body {
   line-height: 22px;
 }
 
-h1, h2, h3 h4 {
+h1, h2, h3, h4 {
   font-weight: bold;
   letter-spacing: 0.2px;
 }
@@ -107,9 +107,13 @@ header nav {
 .devtools {
   float: right;
   position: relative;
-  bottom: 23px;
-  right: 2%;
+  bottom: 30px;
+  right: 1%;
   cursor: pointer;
+}
+
+.devtools img{
+  width: 28px;
 }
 
 .header-ul {
@@ -274,8 +278,8 @@ footer a {
   width: 360px;
 }
 
-.blog-column-right a:hover{
-color: #222222;
+.blog-column-right a:hover {
+  color: #222222;
 }
 
 .blog-content h3 {
@@ -621,6 +625,15 @@ color: #222222;
 
 .maps-details img {
   max-width: 100%;
+}
+
+.modal {
+  overflow: hidden;
+}
+
+.modal-body {
+  height:38rem;
+  overflow: auto;
 }
 
 /* ========================== */
@@ -1157,3 +1170,22 @@ color: #222222;
     margin-left: 23px;
   }
 }
+
+/* scroll bar */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #e0e2e8;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #eee;
+}
+
+/* scroll end */
