fix: type issues [ECO-1028]

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -489,6 +489,7 @@ footer a {
 .mission-content-section {
   display: flex;
   width: 380px;
+  margin-top: 20px;
 }
 
 .mission-icon, .mission-section-content {
